# portfolio-app

./: .gitignore  DEBUGGING.md  README.md  TAURI_README.md  VERSION_GUIDE.md  package-lock.json  package.json  proxy-server.js  vite.config.js
.claude/: settings.local.json
sample/: portfolio-sample.json
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: AddAssetModal.jsx  AddDividendModal.jsx  AssetAllocationChart.jsx  AssetChart.jsx  AssetDetailModal.jsx  EditAssetModal.jsx  EditConsolidatedAssetModal.jsx  EditDividendModal.jsx  EditPurchaseRecordModal.jsx  EditSellRecordModal.jsx  Notification.jsx  PerformanceChart.jsx  PortfolioSummaryAndTable.jsx  PortfolioTable.jsx  SellAssetModal.jsx  SellHistoryModal.jsx  SettingsModal.jsx  SummaryCards.jsx  TagAnalysisChart.jsx  TagComparisonChart.jsx  TagManagementModal.jsx  Toast.css  Toast.jsx  TrendChart.jsx
src/hooks/: usePortfolioHandlers.js
src/utils/: backup.js  calculations.js  database.js  dateUtils.js  portfolioUtils.js  priceAPI.js  storage.js  tags.js  tauriAPI.js
